chore: oauth 관련 설정 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,9 +19,9 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 # GitHub OAuth2
-spring.security.oauth2.client.registration.github.client-id=
-spring.security.oauth2.client.registration.github.client-secret=
-spring.security.oauth2.client.registration.github.redirect-uri=
+spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
+spring.security.oauth2.client.registration.github.redirect-uri=${GITHUB_REDIRECT_URI}
 spring.security.oauth2.client.registration.github.scope=read:user
 spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
 spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
