--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.c
 spring.security.oauth2.client.registration.github.client-name=GitHub
 spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
 spring.security.oauth2.client.provider.github.user-name-attribute=login
+
+# QR Code Service
+qr.domain.uri=http://localhost:8080/
+qr.code.directory=src/main/resources/static/qrcodes/
